--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -42,3 +42,11 @@ $num: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95,
   .mb-0 {
     margin-bottom: 0 !important;
   }
+
+
+  ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
