--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,7 +1,12 @@
 @import './base.css';
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+  position: relative;
+  font-weight: normal;
 }
 
 html,
