--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,48 +1,46 @@
-$num: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95,
-  100;
+$num: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100;
 
 @each $n in $num {
-    .pl-#{$n} {
-      padding-left: $n + px !important;
-    }
-  
-    .pr-#{$n} {
-      padding-right: $n + px !important;
-    }
-  
-    .pt-#{$n} {
-      padding-top: $n + px !important;
-    }
-  
-    .pb-#{$n} {
-      padding-bottom: $n + px !important;
-    }
-  
-    .ml-#{$n} {
-      margin-left: $n + px !important;
-    }
-  
-    .mr-#{$n} {
-      margin-right: $n + px !important;
-    }
-  
-    .mt-#{$n} {
-      margin-top: $n + px !important;
-    }
-  
-    .mb-#{$n} {
-      margin-bottom: $n + px !important;
-    }
-  }
-  
-  .mt-0 {
-    margin-top: 0 !important;
-  }
-  
-  .mb-0 {
-    margin-bottom: 0 !important;
+  .pl-#{$n} {
+    padding-left: $n + px !important;
   }
 
+  .pr-#{$n} {
+    padding-right: $n + px !important;
+  }
+
+  .pt-#{$n} {
+    padding-top: $n + px !important;
+  }
+
+  .pb-#{$n} {
+    padding-bottom: $n + px !important;
+  }
+
+  .ml-#{$n} {
+    margin-left: $n + px !important;
+  }
+
+  .mr-#{$n} {
+    margin-right: $n + px !important;
+  }
+
+  .mt-#{$n} {
+    margin-top: $n + px !important;
+  }
+
+  .mb-#{$n} {
+    margin-bottom: $n + px !important;
+  }
+}
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
 
 ul,
 li {
